2004-01-26  Scott Dattalo  <scott@dattalo.com>
	* src/* gui/*
	  Replaced references to 'file_register' with 'Register'.
	  Removed many gpsim_*() calls. 
	  Renamed the program_memory_access class to ProgramMemoryAccess.
	  Moved processor member functions associated with code breakpoints
	  into the ProgramMemoryAccess class.
	
2004-01-26  Scott Dattalo  <scott@dattalo.com>
	* src/register.h, src/register.cc, src/pic-register.h, src/pic-processor.h,
	  src/14bit-registers.cc
	cleaned up some include file dependencies.
	moved the program counter class.
	
2004-01-23  Scott Dattalo  <scott@dattalo.com>
	* src/trace.cc, src/trace.h: added boolean event logger
	* src/intcon.cc, src/16bit-*: Debugging an interrupt problem
	with the 16-bit core
	
2004-01-22  Scott Dattalo  <scott@dattalo.com>
	* gui/gui*.cc: converted the cross_reference_to_gui structure
	into the CrossReferenceToGUI class.
	* src/pir.h: fixed default names of the PIR registers
	* regression/p16f873/p16f873.asm: added
	
2004-01-20  Scott Dattalo  <scott@dattalo.com>
	* gui/gui_regwin.cc, gui/gui_src_asm.cc, gui_watch.cc:
	  Changed gpsim_* api calls to their direct counterparts
	* src/interface.cc, src/interface.h:
	  Removed obsolete API's
	* src/breakpoints.cc (clear_all_register): added
	* cli/input.cc: fixed memory leak.
	* doc/gpsim.lyx: updated documentation with recent CLI changes

2004-01-18  Borut Razem  <borut.razem@siol.net>
	* configure.in: added --enable-gtk2 configure command line option for
	  linking with GTK+ 2.x

2004-01-17  Borut Razem  <borut.razem@siol.net>
	Update to GTK+ 2.x:
	* config_win32.h.in: version 0.21.1, updated #defines
	* cli/cmd_load.cc, cli/input.cc, cli/input.h:
	  char * replaced with const char *,
	  removed unneeded #include <sys/errno.h>
	* gui/gui.h, gui/gui_breadboard.cc, gui/gui_break.cc,
	  gui/gui_dialog.cc, gui/gui_menu.cc,gui/gui_object.cc,
	  gui/gui_profile.cc, gui/gui_regwin.cc, gui\gui_src.cc,